# spark-code-examples

./: .gitignore  .pre-commit-config.yaml  =2.9.3  README.md  pyproject.toml
advanced-machine-learning-and-signal-processing/Examples/: Finding optimal locations of new store using Decision Optimization and HERE.ipynb  Finding optimal locations of new store using Decision Optimization.ipynb  Movie recommender system with Spark machine learning.ipynb  Use Spark ML and Python to detect network intrusions.ipynb  Use Spark and Python to predict equipment purchase.ipynb  Use Spark and Scala to predict Equipment Purchase.ipynb  Use XGBoost to classify tumors - binary .ipynb  Use statsmodels to forecast the CPI (time series).ipynb
advanced-machine-learning-and-signal-processing/Week 1/: Introduction.ipynb
advanced-machine-learning-and-signal-processing/Week 2/: Classification (programming assignment).ipynb  Niave Bayes.ipynb  Use Apache SystemML and Spark for machine learning.ipynb  a2_w1_s3_Pipelines_with_ScikitLearn.ipynb  (+5 more)
applied-ai-apach-system-ml-and-dl4j/: Apache SystemML (PA).ipynb
big-data-school-notebooks/: Getting Started with MLlib.ipynb  KS_BigData_SparkStreaming_d2.ipynb  SimulatedDevice.py  Structured Streaming using Python DataFrames.ipynb  TestNotebookLab1.ipynb
cleaning-and-exploring-big-data-using-pyspark/: code.ipynb
collection-of-interesting-notebook/: megogo-final-run.ipynb
pyspark-churn-model/: main.ipynb
pyspark-ml-crashcourse/: README.md
recommendation-system-als/: megogo-final-run.ipynb
spark-training/: README.md
(+319 files in other folders)
